--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 	<head>
 		<meta name="yandex-verification" content="067a41970570e487" />
+		<meta name="google-site-verification" content="nwYgqtJgaI9JorkkfPCHp8A2TQsEWR0cjKeypZhV-6M" />
 		<title>{{ page.title }}</title>
 	</head>
 	<body itemscope="" itemtype="http://schema.org/WebPage">
