--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<meta name="yandex-verification" content="067a41970570e487" />
 		<meta name="google-site-verification" content="nwYgqtJgaI9JorkkfPCHp8A2TQsEWR0cjKeypZhV-6M" />
 		<title>{{ page.title }}</title>
